--- a/pom.xml
+++ b/pom.xml
@@ -97,5 +97,10 @@
 			<artifactId>jedis</artifactId>
 		</dependency>
 		<!-- Redis Dependence End -->
+		<dependency>
+        	<groupId>net.sf.jxls</groupId>
+        	<artifactId>jxls-core</artifactId>
+        	<version>1.0.6</version>
+        </dependency> 
 	</dependencies>
 </project>
