--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,17 @@
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
 		</dependency>
+		<!-- <dependency>
+   			 <groupId>fr.opensagres.xdocreport</groupId>
+   			 <artifactId>org.apache.poi.xwpf.converter.pdf</artifactId>
+   			 <version>1.0.6</version>
+		</dependency>
+		<dependency>  
+       		 <groupId> fr.opensagres.xdocreport</groupId>  
+       		 <artifactId> org.apache.poi.xwpf.converter.core</artifactId>  
+        	<version> 1.0.6</version>  
+   		 </dependency>  -->
+		
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
@@ -102,5 +113,27 @@
         	<artifactId>jxls-core</artifactId>
         	<version>1.0.6</version>
         </dependency> 
+        
+        <dependency>  
+    		<groupId>org.freemarker</groupId>  
+   			<artifactId>freemarker</artifactId>  
+    	<version>2.3.23</version>  
+    	</dependency>
+    	
+    	<!-- <dependency>
+		    <groupId>itext</groupId>
+		    <artifactId>itext</artifactId>
+		    <version>1.3.1</version>
+		</dependency> -->
+		
+		<!-- https://mvnrepository.com/artifact/org.xhtmlrenderer/xhtmlrenderer -->
+		
+		 <dependency>  
+            <groupId>org.xhtmlrenderer</groupId>  
+            <artifactId>flying-saucer-pdf</artifactId>  
+            <version>9.0.3</version>  
+        </dependency>
+    	
+
 	</dependencies>
 </project>
